--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,129 @@
 }
 
 body {
-    background-color: black;
+    background-color: rgb(199, 199, 199);
+    /* background-color: black */
 }
+
+#canvas {
+    display: flex;
+    margin: auto;
+
+}
+
+.container {
+    margin-top: 0px;
+    padding-left: 100px;
+    display: flex;
+    background-color: black;
+    height: 150px;
+    justify-content: space-evenly;
+}
+
+.container .pad {
+    display: flex;
+    /* margin-left: 300px; */
+    flex-direction: column;
+}
+
+
+.container .pad div {
+    background-color: grey;
+    width: 50px;
+    height: 50px;
+}
+
+ #direction-up {
+     /* background-color: red; */
+    margin-top: 0px;
+}
+
+#direction-left {
+    /* background-color: green; */
+    margin-left: -50px;
+    margin-top: -50px;
+}
+
+ #direction-right {
+    /* background-color: hotpink; */
+    margin-left: 50px;
+}  
+
+#direction-down {
+
+}
+
+
+.menu {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu div {
+    border-radius: 5px;
+    padding: 10px;
+    width: 300px;
+    background-color: grey;
+    margin: 2px;
+}
+
+.menu-buttons-container{
+    background-color: rgb(182, 182, 182);
+    display: flex;
+    flex-direction: row;
+}
+
+div .menu-button {
+    background-color: rgb(34, 34, 34);
+}
+
+
+.actions {
+    display: flex;
+    flex-direction: column;
+    /* align-content: flex-end; */
+    margin-top: 40px;
+}
+
+.actions>div {
+    border-radius: 2px;
+    padding: 10px;
+    width: 200px;
+    height: 70px;
+    /* background-color: grey; */
+    margin: 5px;
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: baseline; */
+}
+
+.action-button {
+    border-radius: 5px;
+    background-color: grey;
+    padding: 10px;
+    width: 70px;
+    height: 55px;
+    margin: 0px;
+}
+
+#action-button-a {
+    border-radius: 50%;
+    background-color: rgb(221, 17, 17);
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    margin-top: -8px;
+}
+
+#action-button-b {
+    border-radius: 50%;
+    background-color: rgb(221, 17, 17);
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    margin-top: -8px;
+}
+
+
+
+
